--- a/src/assets/css/reset.css
+++ b/src/assets/css/reset.css
@@ -30,3 +30,4 @@ label{cursor:pointer;}
 input:focus {outline:none;}
 .clearfix::before, .clearfix::after {content: "";display: table;}
 .clearfix::after {clear: both;}
+.el-message-box {width: auto;}
